Quick test of alignment fix

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ h2 {
 }
 
 b {
-    background-color: #8b8b8b;
+    background-color: #FFC107;
     color: white;
     font-weight: 600;
     SCALE: none;
